// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> default should render TextArea with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> disabled should render a disabled TextArea 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 eBfxee"
          disabled=""
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
            disabled=""
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 bOBtNb"
                color="shade.980"
                data-testid="ds-text"
                disabled=""
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 cRCkbU Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                disabled=""
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
            disabled=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> errorText should render TextArea with help text if errorText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dUTyeY"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
        <div
          class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 lgxseS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 epKApN Spaceweb__Space-sc-1fdjx97-0 lbtmWm"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 hLYWLn"
              color="negative.900"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> errorText with maxLength should render TextArea with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dUTyeY"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                maxlength="10"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
        <div
          class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 lgxseS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 epKApN Spaceweb__Space-sc-1fdjx97-0 lbtmWm"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 hLYWLn"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Spaceweb__Space-sc-1fdjx97-0 eZHofG"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 bJUMcv"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> focus should have focus when TextArea is focused 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 fDWmFF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> helpText should render TextArea with help text if helpText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
        <div
          class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 lgxseS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 epKApN Spaceweb__Space-sc-1fdjx97-0 lbtmWm"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 bJUMcv"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> helpText with maxLength should render TextArea with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                maxlength="10"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
        <div
          class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 lgxseS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 epKApN Spaceweb__Space-sc-1fdjx97-0 lbtmWm"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 bJUMcv"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Spaceweb__Space-sc-1fdjx97-0 eZHofG"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 bJUMcv"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <label
        class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs Spaceweb__Space-sc-1fdjx97-0 hitLhv"
        color="shade.980"
        data-testid="ds-text"
        for="sample-id"
        id="sample-id"
        value=""
        width="medium"
      >
        Sample Label
      </label>
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 cTqWdc Spaceweb__Space-sc-1fdjx97-0 iDLaIG Sizeweb__Size-ej4iby-0 kaJXif"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 dRwNob Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 cCzXUG Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <label
      class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 dGSaIV Spaceweb__Space-sc-1fdjx97-0 dvcLZx"
      color="shade.980"
      data-testid="ds-text"
      for="sample-id"
      id="sample-id"
      value=""
      width="medium"
    >
      Sample Label
    </label>
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 cTqWdc Spaceweb__Space-sc-1fdjx97-0 iDLaIG Sizeweb__Size-ej4iby-0 kaJXif"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 dRwNob Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 cCzXUG Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on top(default) and variant outlined(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> variant should render filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <label
      class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 dGSaIV Spaceweb__Space-sc-1fdjx97-0 dvcLZx"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 cTqWdc Spaceweb__Space-sc-1fdjx97-0 iDLaIG Sizeweb__Size-ej4iby-0 kaJXif"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 dRwNob Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 cCzXUG Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> variant should render outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 dzLbld"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="auto"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 cCIbrO Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="small"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 FYrrJ Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
